:rocket: blog add like ogic + claims

--- a/src/ui/src/app/components/blogs/view/view.component.html
+++ b/src/ui/src/app/components/blogs/view/view.component.html
@@ -44,6 +44,7 @@
                             <i class="ai-x"></i>
                         </a>
                     </div>
+                    <button class="btn-primary" (click)="likeBlog()">Like</button>
                 </div>
             </div>
 
