--- a/src/ui/src/app/components/shared/navbar/navbar.component.html
+++ b/src/ui/src/app/components/shared/navbar/navbar.component.html
@@ -32,58 +32,58 @@
 		<!-- User signed in state. Account dropdown on screens > 576px -->
 		<div class="dropdown nav d-none d-sm-block order-lg-3">
 			@if (isLoggedIn) {
-				<a class="nav-link d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-					<img class="border rounded-circle" src="assets/images/home/avatar.jpg" width="48" alt="{{ user.username }}" />
-					<div class="ps-2">
-						<div class="fs-xs lh-1 opacity-60">Hello,</div>
-						<div class="fs-sm dropdown-toggle">{{ user.username }}</div>
-					</div>
-				</a>
-				<div class="dropdown-menu dropdown-menu-end my-1">
-					<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
-					<a class="dropdown-item disabled" href="account-overview.html">
-						<i class="ai-user-check fs-lg opacity-70 me-2"></i>
-						Profile
-					</a>
-					<a class="dropdown-item disabled" href="account-settings.html">
-						<i class="ai-settings fs-lg opacity-70 me-2"></i>
-						Settings
-					</a>
-					<a class="dropdown-item disabled" href="account-billing.html">
-						<i class="ai-heart fs-base opacity-70 me-2 mt-n1"></i>
-						Favs
-					</a>
-					<div class="dropdown-divider"></div>
-					<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Config</h6>
-					<a class="dropdown-item disabled" href="account-orders.html">
-						<i class="ai-cart fs-lg opacity-70 me-2"></i>
-						Themes
-					</a>
-					<a class="dropdown-item disabled" href="account-earnings.html">
-						<i class="ai-activity fs-lg opacity-70 me-2"></i>
-						Accessibility
-					</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item disabled" href="account-signin.html">
-						<i class="ai-logout fs-lg opacity-70 me-2"></i>
-						Sign out
-					</a>
+			<a class="nav-link d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+				<img class="border rounded-circle" src="assets/images/home/avatar.jpg" width="48" alt="{{ user.username }}" />
+				<div class="ps-2">
+					<div class="fs-xs lh-1 opacity-60">Hello,</div>
+					<div class="fs-sm dropdown-toggle">{{ user.username }}</div>
 				</div>
+			</a>
+			<div class="dropdown-menu dropdown-menu-end my-1">
+				<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
+				<a class="dropdown-item disabled" href="account-overview.html">
+					<i class="ai-user-check fs-lg opacity-70 me-2"></i>
+					Profile
+				</a>
+				<a class="dropdown-item disabled" href="account-settings.html">
+					<i class="ai-settings fs-lg opacity-70 me-2"></i>
+					Settings
+				</a>
+				<a class="dropdown-item disabled" href="account-billing.html">
+					<i class="ai-heart fs-base opacity-70 me-2 mt-n1"></i>
+					Favs
+				</a>
+				<div class="dropdown-divider"></div>
+				<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Config</h6>
+				<a class="dropdown-item disabled" href="account-orders.html">
+					<i class="ai-cart fs-lg opacity-70 me-2"></i>
+					Themes
+				</a>
+				<a class="dropdown-item disabled" href="account-earnings.html">
+					<i class="ai-activity fs-lg opacity-70 me-2"></i>
+					Accessibility
+				</a>
+				<div class="dropdown-divider"></div>
+				<button class="dropdown-item" href="#" (click)="logout()">
+					<i class="ai-logout fs-lg opacity-70 me-2"></i>
+					Sign out
+				</button>
+			</div>
 			} @else {
-				<a class="nav-link d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-					<img class="border rounded-circle" src="assets/images/home/avatar.jpg" width="48" alt="guest" />
-					<div class="ps-2">
-						<div class="fs-xs lh-1 opacity-60">Hello,</div>
-						<div class="fs-sm dropdown-toggle">Guest</div>
-					</div>
-				</a>
-				<div class="dropdown-menu dropdown-menu-end my-1">
-					<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
-					<a class="dropdown-item" routerLink="/account/login">
-						<i class="ai-user-check fs-lg opacity-70 me-2"></i>
-						Login/Signup
-					</a>
+			<a class="nav-link d-flex align-items-center p-0" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+				<img class="border rounded-circle" src="assets/images/home/avatar.jpg" width="48" alt="guest" />
+				<div class="ps-2">
+					<div class="fs-xs lh-1 opacity-60">Hello,</div>
+					<div class="fs-sm dropdown-toggle">Guest</div>
 				</div>
+			</a>
+			<div class="dropdown-menu dropdown-menu-end my-1">
+				<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
+				<a class="dropdown-item" routerLink="/account/login">
+					<i class="ai-user-check fs-lg opacity-70 me-2"></i>
+					Login/Signup
+				</a>
+			</div>
 			}
 		</div>
 		<!-- Mobile menu toggler (Hamburger) -->
@@ -124,64 +124,84 @@
 				</li>
 
 				@if (isLoggedIn) {
-					<!-- User signed in state. Account dropdown on screens > 576px -->
-					<li class="nav-item dropdown d-sm-none border-top mt-2 pt-2">
-						<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-							<img class="border rounded-circle" src="assets/images/home/avatar.jpg" width="48" alt="guest" />
-							<div class="ps-2">
-								<div class="fs-xs lh-1 opacity-60">Hello,</div>
-								<div class="fs-sm dropdown-toggle">{{ user.username }}</div>
-							</div>
-						</a>
-						<div class="dropdown-menu">
-							<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
-							<a class="dropdown-item disabled" href="account-overview.html">
-								<i class="ai-user-check fs-lg opacity-70 me-2"></i>
-								Profile
-							</a>
-							<a class="dropdown-item disabled" href="account-settings.html">
-								<i class="ai-settings fs-lg opacity-70 me-2"></i>
-								Settings
-							</a>
-							<a class="dropdown-item disabled" href="account-billing.html">
-								<i class="ai-heart fs-base opacity-70 me-2 mt-n1"></i>
-								Favs
-							</a>
-							<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pt-3 pb-1">Config</h6>
-							<a class="dropdown-item disabled" href="account-orders.html">
-								<i class="ai-cart fs-lg opacity-70 me-2"></i>
-								Themes
-							</a>
-							<a class="dropdown-item disabled" href="account-earnings.html">
-								<i class="ai-activity fs-lg opacity-70 me-2"></i>
-								Accesibility
-							</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item disabled" href="account-signin.html">
-								<i class="ai-logout fs-lg opacity-70 me-2"></i>
-								Sign out
-							</a>
+				<!-- User signed in state. Account dropdown on screens > 576px -->
+				<li class="nav-item dropdown d-sm-none border-top mt-2 pt-2">
+					<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+						<img class="border rounded-circle" src="assets/images/home/avatar.jpg" width="48" alt="guest" />
+						<div class="ps-2">
+							<div class="fs-xs lh-1 opacity-60">Hello,</div>
+							<div class="fs-sm dropdown-toggle">{{ user.username }}</div>
 						</div>
-					</li>
+					</a>
+					<div class="dropdown-menu">
+						<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
+						<a class="dropdown-item disabled" href="account-overview.html">
+							<i class="ai-user-check fs-lg opacity-70 me-2"></i>
+							Profile
+						</a>
+						<a class="dropdown-item disabled" href="account-settings.html">
+							<i class="ai-settings fs-lg opacity-70 me-2"></i>
+							Settings
+						</a>
+						<a class="dropdown-item disabled" href="account-billing.html">
+							<i class="ai-heart fs-base opacity-70 me-2 mt-n1"></i>
+							Favs
+						</a>
+						<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pt-3 pb-1">Config</h6>
+						<a class="dropdown-item disabled" href="account-orders.html">
+							<i class="ai-cart fs-lg opacity-70 me-2"></i>
+							Themes
+						</a>
+						<a class="dropdown-item disabled" href="account-earnings.html">
+							<i class="ai-activity fs-lg opacity-70 me-2"></i>
+							Accesibility
+						</a>
+						<div class="dropdown-divider"></div>
+						<button class="dropdown-item" href="#" (click)="logout()">
+							<i class="ai-logout fs-lg opacity-70 me-2"></i>
+							Sign out
+						</button>
+					</div>
+				</li>
 				} @else {
-					<li class="nav-item dropdown d-sm-none border-top mt-2 pt-2">
-						<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-							<img class="border rounded-circle" src="assets/images/home/avatar.jpg" width="48" alt="Isabella Bocouse" />
-							<div class="ps-2">
-								<div class="fs-xs lh-1 opacity-60">Hello,</div>
-								<div class="fs-sm dropdown-toggle">Guest</div>
-							</div>
-						</a>
-						<div class="dropdown-menu">
-							<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
-							<a class="dropdown-item disabled" href="account-overview.html">
-								<i class="ai-user-check fs-lg opacity-70 me-2"></i>
-								Login/Signup
-							</a>
+				<li class="nav-item dropdown d-sm-none border-top mt-2 pt-2">
+					<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
+						<img class="border rounded-circle" src="assets/images/home/avatar.jpg" width="48" alt="Isabella Bocouse" />
+						<div class="ps-2">
+							<div class="fs-xs lh-1 opacity-60">Hello,</div>
+							<div class="fs-sm dropdown-toggle">Guest</div>
 						</div>
-					</li>
+					</a>
+					<div class="dropdown-menu">
+						<h6 class="dropdown-header fs-xs fw-medium text-body-secondary text-uppercase pb-1">Account</h6>
+						<a class="dropdown-item disabled" href="account-overview.html">
+							<i class="ai-user-check fs-lg opacity-70 me-2"></i>
+							Login/Signup
+						</a>
+					</div>
+				</li>
 				}
 			</ul>
 		</nav>
 	</div>
 </header>
+
+<!-- Modal markup -->
+
+<div id="logoutModal" class="modal" data-bs-backdrop="static" tabindex="-1" role="dialog">
+	<div class="modal-dialog" role="document" data-bs-backdrop="static" data-bs-keyboard="false">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Logout</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body text-primary">Logout?</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-danger mx-4" data-bs-dismiss="modal" (click)="logout()">Ok</button>
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+			</div>
+		</div>
+	</div>
+</div>
