--- a/src/ui/src/app/components/account/login/login.component.html
+++ b/src/ui/src/app/components/account/login/login.component.html
@@ -28,7 +28,7 @@
 				<input class="form-check-input" type="checkbox" id="keep-signedin" />
 				<label class="form-check-label ms-1" for="keep-signedin">Keep me signed in</label>
 			</div>
-			<a class="fs-sm fw-semibold text-decoration-none my-1" routerLink="/account/otp" [queryParams]="{ username: 'falana' }">Forgot password?</a>
+			<a class="fs-sm fw-semibold text-decoration-none my-1" routerLink="/account/otp" [queryParams]="{ username: 'test' }">Forgot password?</a>
 		</div>
 		<button class="btn btn-lg btn-primary w-100 mb-4" type="submit">Sign in</button>
 
