--- a/src/ui/src/app/components/account/signup/signup.component.html
+++ b/src/ui/src/app/components/account/signup/signup.component.html
@@ -4,8 +4,8 @@
 		Already have an account?&nbsp;&nbsp;
 		<a routerLink="/account/login">Login here</a>
 	</p>
-	<form class="needs-validation" (ngSubmit)="onSubmit()" [formGroup]="sigupForm">
-		<div class="row row-cols-1 row-cols-sm-2">
+	<form class="" (ngSubmit)="onSubmit()" [formGroup]="sigupForm">
+		<div class="row row-cols-1 row-cols-sm-2 pb-4">
 			<div class="col mb-6">
 				<input class="form-control form-control-lg" type="text" placeholder="First name" required formControlName="firstName" />
 			</div>
