--- a/src/ui/src/app/components/account/account.component.html
+++ b/src/ui/src/app/components/account/account.component.html
@@ -1,10 +1,13 @@
 <div class="d-lg-flex position-relative h-100">
-	<app-home-button></app-home-button>
-	<!-- Sign in form -->
+	<!-- Home button -->
+	<a class="text-nav btn btn-icon bg-light border rounded-circle position-absolute top-0 end-0 p-0 mt-3 me-3 mt-sm-4 me-sm-4" routerLink="/" data-bs-toggle="tooltip" data-bs-placement="left" title="Back to home" aria-label="Back to home">
+		<i class="ai-home"></i>
+	</a>
+
 	<div class="d-flex flex-column align-items-center w-lg-50 h-100 px-3 px-lg-5 pt-5">
 		<router-outlet></router-outlet>
 		<!-- Copyright -->
-		<p class="nav w-100 fs-sm pt-5 mt-auto mb-5" style="max-width: 526px">
+		<p class="nav w-100 fs-sm pt-5 pb-5 mt-auto mb-5" style="max-width: 526px">
 			<span class="text-body-secondary">&copy; All rights reserved. Made by</span>
 			<a class="nav-link d-inline-block p-0 ms-1" href="https://createx.studio/" target="_blank" rel="noopener">Createx Studio</a>
 		</p>
