--- a/src/ui/src/app/components/shared/side-panel/side-panel.component.html
+++ b/src/ui/src/app/components/shared/side-panel/side-panel.component.html
@@ -2,13 +2,14 @@
 <div class="offcanvas offcanvas-end" id="customizer" data-bs-scroll="true" tabindex="-1">
 	<div class="offcanvas-header border-bottom">
 		<h4 class="offcanvas-title">
-			Almondcove
+			Jassi's space
 			<span class="text-danger fs-xs ms-2">0.7.0</span>
 		</h4>
 		<button class="btn-close" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 	</div>
 	<div class="offcanvas-body">
-		<div class="d-flex align-items-center mt-n2 mb-3">
+        <app-audio-player></app-audio-player>
+		<div class="d-flex align-items-center pt-4 mt-n2 mb-3">
 			<i class="ai-maximize text-body-secondary fs-5 me-2"></i>
 			<h5 class="mb-0">Updates</h5>
 		</div>
@@ -38,6 +39,7 @@
 			<div><a routerLink="/theme">theme</a></div>
 		</div> -->
 	</div>
+  
 </div>
 
 <!-- Customizer toggler -->
@@ -45,3 +47,4 @@
 	<i class="ai-settings text-primary fs-base me-1 ms-n1"></i>
 	Panel
 </a>
+
