:art: content update

--- a/src/ui/src/app/components/shared/navbar/navbar.component.html
+++ b/src/ui/src/app/components/shared/navbar/navbar.component.html
@@ -119,9 +119,49 @@
 		<!-- Navbar collapse (Main navigation) -->
 		<nav class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav navbar-nav-scroll me-auto" style="--ar-scroll-height: 520px">
-				<li class="nav-item">
+                <li class="nav-item">
 					<a class="nav-link" (click)="navToggler()" routerLink="/">Home</a>
 				</li>
+                <!-- <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Lab</a>
+                    <div class="dropdown-menu overflow-hidden p-0">
+                      <div class="d-lg-flex">
+                        <div class="mega-dropdown-column pt-1 pt-lg-3 pb-lg-4">
+                          <ul class="list-unstyled mb-0">
+                            <li>
+                              <a class="dropdown-item disabled" routerLink="/studio">Home</a>
+                              <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 rounded-3 rounded-start-0" style="background-image: url(assets/img/megamenu/landings.jpg);"></span>
+                            </li>
+                            <li>
+                              <a class="dropdown-item disabled" href="landing-marketing-agency.html">Radio features</a>
+                              <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/marketing-agency.jpg);"></span>
+                            </li>
+                            <li>
+                                <a class="dropdown-item disabled" href="landing-marketing-agency.html">Discography</a>
+                                <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/marketing-agency.jpg);"></span>
+                              </li>
+                          </ul>
+                        </div>
+                        <div class="mega-dropdown-column pb-2 pt-lg-3 pb-lg-4">
+                          <ul class="list-unstyled mb-0">
+                            <li>
+                              <a class="dropdown-item disabled" href="landing-creative-agency.html">Sample packs</a>
+                              <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/creative-agency.jpg);"></span>
+                            <li>
+                              <a class="dropdown-item disabled" href="landing-yoga-studio.html">Projects</a>
+                              <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/yoga-studio.jpg);"></span>
+                            </li>
+                            <li>
+                              <a class="dropdown-item" href="landing-influencer.html">Picks</a>
+                              <span class="mega-dropdown-column position-absolute top-0 end-0 h-100 bg-size-cover bg-repeat-0 z-2 opacity-0" style="background-image: url(assets/img/megamenu/influencer.jpg);"></span>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="mega-dropdown-column position-relative border-start z-3"></div>
+                      </div>
+                    </div>
+                  </li> -->
+				
 				<li class="nav-item">
 					<a class="nav-link" (click)="navToggler()" routerLink="/blogs">Blogs</a>
 				</li>
@@ -131,14 +171,14 @@
 						<span class="text-danger fs-xs ms-2">wip</span>
 					</a>
 				</li>
-				<li class="nav-item">
+				<!-- <li class="nav-item">
 					<a class="nav-link" (click)="navToggler()" routerLink="#">
 						Gallery
 						<span class="text-danger fs-xs ms-2">wip</span>
 					</a>
-				</li>
+				</li> -->
 				<li class="nav-item">
-					<a class="nav-link" (click)="navToggler()" routerLink="/artifacts">
+					<a class="nav-link disabled" (click)="navToggler()" routerLink="/artifacts">
 						Artifacts
 						<span class="text-danger fs-xs ms-2">wip</span>
 					</a>
