--- a/src/ui/src/app/components/about/home/home.component.html
+++ b/src/ui/src/app/components/about/home/home.component.html
@@ -3,7 +3,30 @@
 	<div class="bg-primary bg-opacity-10 rounded-circle position-absolute start-50 d-none d-lg-block" style="bottom: 220px; width: 480px; height: 480px; margin-left: -240px" data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200" data-aos-offset="300"></div>
 	<div class="container position-relative z-5 mt-2 pt-5 pb-2 pb-sm-2 pb-lg-2">
 		<div class="display-3 text-center text-primary mx-auto pt-5 my-2 my-sm-4" style="max-width: 680px">
-			<svg width="450" height="350" viewBox="220 400 900 600" xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200" data-aos-offset="300">
+            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="200.000000pt" height="66.000000pt"
+            viewBox="0 0 1000.000000 300.000000" preserveAspectRatio="xMidYMid meet" style="margin-left: 0px;">
+            <g transform="translate(0.000000,275.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
+              <path
+                d="M520 2725 c0 -3 0 -104 0 -225 0 -121 0 -224 0 -230 0 -6 84 -10 230 -10 l231 0 -3 -787 c-4 -900 0 -858 -87 -944 -71 -71 -168 -85 -263 -38 -43 22 -73 62 -104 138 l-23 56 -250 3 c-138 1 -251 -1 -251 -5 0 -5 11 -48 24 -98 47 -173 117 -297 228 -401 188 -175 476 -231 735 -142 132 45 199 87 281 173 103 108 159 228 187 400 12 75 15 262 15 1103 l0 1012 -475 0 c-261 0 -475 -2 -475 -5z">
+              </path>
+              <path
+                d="M2305 2734 c-326 -53 -572 -272 -639 -571 -21 -92 -21 -270 0 -371 33 -164 134 -314 272 -405 79 -53 217 -116 397 -182 201 -74 271 -111 341 -180 74 -73 96 -129 96 -242 -1 -96 -31 -162 -107 -231 -73 -67 -154 -97 -260 -96 -102 1 -167 28 -229 94 -61 66 -88 121 -111 232 l-5 28 -256 0 -257 0 7 -60 c21 -187 95 -345 226 -484 176 -186 400 -275 664 -263 198 9 362 65 508 176 127 96 233 262 280 436 31 118 31 338 -1 450 -82 290 -258 442 -689 594 -95 34 -198 74 -230 90 -70 35 -146 115 -161 167 -14 52 -14 147 1 198 18 60 99 138 163 157 100 29 212 9 275 -48 54 -48 76 -86 97 -168 l19 -70 244 0 244 0 -3 49 c-8 132 -80 311 -171 423 -96 119 -250 219 -395 258 -60 16 -263 28 -320 19z">
+              </path>
+              <path
+                d="M3447 2481 l-187 -269 2 -417 3 -417 160 233 160 234 3 -907 c1 -533 6 -908 11 -908 5 0 168 233 362 518 775 1134 880 1287 889 1290 7 2 10 -320 10 -912 l0 -916 250 0 250 0 0 1370 0 1370 -232 0 -233 0 -390 -560 c-214 -307 -393 -559 -397 -559 -5 -1 -8 251 -8 559 l0 560 -232 0 -233 -1 -188 -268z">
+              </path>
+              <path
+                d="M5445 2727 c-3 -7 -4 -114 -3 -237 l3 -225 483 -3 482 -2 0 -330 0 -330 -272 -2 -273 -3 0 -235 0 -235 273 -3 272 -2 0 -320 c0 -249 -3 -320 -12 -320 -7 0 -220 0 -473 0 -253 0 -466 -4 -473 -8 -9 -7 -12 -61 -10 -238 l3 -229 738 -3 737 -2 -2 1367 -3 1368 -733 3 c-588 2 -734 0 -737 -11z">
+              </path>
+              <path
+                d="M7002 2503 l3 -238 478 -3 477 -2 0 -330 0 -330 -267 -2 -268 -3 -3 -237 -2 -238 270 0 270 0 -2 -320 -3 -321 -475 -2 -475 -2 -3 -237 -2 -238 735 0 735 0 0 1370 0 1370 -735 0 -735 0 2 -237z">
+              </path>
+              <path
+                d="M8557 2723 c-4 -3 -7 -618 -7 -1365 l0 -1358 255 0 255 0 0 1130 0 1130 253 2 252 3 3 233 2 232 -503 0 c-277 0 -507 -3 -510 -7z">
+              </path>
+            </g>
+          </svg>
+			<!-- <svg width="450" height="350" viewBox="220 400 900 600" xmlns="http://www.w3.org/2000/svg" data-aos="zoom-in" data-aos-duration="700" data-aos-delay="200" data-aos-offset="300">
 				<g transform="translate(0.000000,1341.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
 					<path
 						d="M6599 9843 c-7 -16 -25 -46 -40 -68 -22 -34 -128 -208 -180 -294 -7 -14 -17 -30 -22 -35 -12 -18 -51 -79 -73 -116 -12 -19 -58 -95 -103 -167 -194 -316 -245 -400 -262 -431 -11 -18 -28 -45 -38 -60 -47 -70 -91 -143 -91 -151 0 -5 -3 -11 -8 -13 -4 -1 -27 -37 -52 -78 -25 -41 -48 -76 -52 -78 -5 -2 -8 -8 -8 -12 0 -9 -69 -122 -88 -145 -4 -5 -15 -25 -22 -42 -8 -18 -18 -33 -22 -33 -5 0 -8 -5 -8 -10 0 -9 -66 -116 -80 -130 -3 -3 -11 -15 -18 -27 -6 -13 -18 -33 -25 -45 -6 -13 -14 -25 -17 -28 -14 -14 -230 -371 -230 -380 0 -5 -3 -10 -8 -12 -4 -1 -27 -37 -52 -78 -24 -41 -54 -89 -67 -106 -13 -17 -23 -36 -23 -42 0 -7 -3 -12 -8 -12 -4 0 -18 -21 -32 -47 -13 -27 -27 -50 -30 -53 -3 -3 -11 -16 -19 -30 -8 -14 -31 -52 -51 -85 -20 -33 -50 -85 -67 -115 -16 -30 -43 -77 -60 -105 -16 -27 -36 -65 -44 -82 -7 -18 -17 -33 -21 -33 -5 0 -8 -9 -8 -20 0 -11 -4 -20 -10 -20 -5 0 -10 -9 -10 -20 0 -11 -4 -20 -8 -20 -10 0 -99 -185 -137 -285 -15 -38 -33 -83 -40 -100 -65 -154 -119 -369 -155 -625 -13 -90 -8 -507 7 -630 8 -65 8 -65 27 -30 10 19 41 67 67 107 27 40 49 75 49 78 0 3 5 11 10 18 15 18 54 78 86 133 16 27 36 58 46 68 10 11 18 23 18 27 0 4 29 50 65 102 36 52 65 100 65 106 0 6 4 11 9 11 5 0 14 14 21 30 7 17 16 30 21 30 5 0 9 5 9 10 0 6 23 44 50 85 28 41 50 79 50 85 0 5 5 10 10 10 6 0 10 5 10 10 0 9 127 205 157 245 5 6 28 44 53 85 25 41 48 80 53 85 4 6 28 44 54 85 25 41 70 112 99 157 30 46 54 87 54 93 0 5 4 10 9 10 5 0 13 9 16 20 3 11 12 26 18 33 13 14 12 13 88 137 29 47 63 99 76 116 12 17 23 36 23 42 0 7 5 12 10 12 6 0 10 4 10 9 0 12 63 115 73 119 4 2 7 8 7 13 0 10 29 56 135 219 34 52 81 127 105 165 24 39 66 106 93 150 28 44 73 116 100 160 28 44 65 104 84 132 18 29 33 57 33 62 0 5 4 11 8 13 4 2 29 37 55 78 25 41 50 80 54 86 4 5 14 21 22 35 8 13 36 58 61 99 26 41 62 100 81 130 62 101 75 110 105 75 30 -37 134 -192 134 -200 0 -3 5 -11 10 -18 15 -18 90 -137 90 -143 0 -3 18 -32 40 -64 22 -32 40 -63 40 -69 0 -5 3 -11 8 -13 4 -1 27 -37 52 -78 25 -41 48 -76 52 -78 5 -2 8 -8 8 -14 0 -6 20 -39 45 -74 25 -34 45 -65 45 -69 0 -3 18 -33 40 -65 22 -32 40 -61 40 -65 0 -3 24 -42 54 -88 29 -45 78 -122 109 -172 31 -49 60 -95 64 -101 8 -10 23 -36 47 -79 11 -19 18 -29 44 -59 6 -8 12 -17 12 -20 0 -9 65 -111 73 -114 4 -2 7 -8 7 -12 0 -8 67 -119 87 -145 5 -5 28 -44 53 -85 25 -41 48 -76 52 -78 5 -2 8 -8 8 -13 0 -11 112 -183 123 -187 4 -2 7 -8 7 -13 0 -8 89 -151 110 -176 5 -7 10 -14 10 -17 0 -3 18 -34 40 -68 22 -35 45 -70 50 -78 5 -8 40 -62 78 -120 38 -58 71 -110 73 -116 2 -6 38 -62 80 -125 60 -90 219 -334 279 -429 5 -8 28 -43 50 -78 22 -34 40 -64 40 -67 0 -2 24 -39 53 -82 29 -43 59 -90 67 -105 18 -38 18 -40 35 121 23 216 17 465 -15 636 -5 28 -14 79 -21 115 -15 88 -77 305 -105 370 -25 58 -31 73 -49 120 -37 101 -203 443 -217 448 -4 2 -8 7 -8 12 0 10 -144 261 -180 315 -15 22 -37 56 -48 76 -11 20 -26 47 -34 60 -7 13 -15 26 -18 29 -3 3 -11 16 -19 30 -8 14 -50 83 -93 154 -43 70 -78 130 -78 133 0 2 -5 9 -10 16 -11 13 -154 238 -174 272 -6 11 -13 22 -16 25 -5 5 -23 36 -44 75 -6 11 -32 53 -59 93 -26 40 -47 77 -47 82 0 6 -4 10 -8 10 -4 0 -14 16 -21 35 -7 19 -17 35 -22 35 -5 0 -9 4 -9 10 0 8 -65 116 -87 145 -26 33 -83 126 -83 135 0 5 -4 10 -10 10 -5 0 -10 4 -10 10 0 8 -61 110 -87 146 -5 5 -14 21 -21 33 -8 13 -22 38 -32 55 -42 73 -164 273 -184 301 -20 29 -68 106 -106 170 -10 17 -55 91 -100 165 -46 74 -88 145 -94 157 -6 13 -14 23 -18 23 -5 0 -8 5 -8 10 0 10 -34 65 -109 180 -20 30 -43 67 -50 83 -10 19 -22 27 -41 27 -19 0 -31 -8 -41 -27z"
@@ -13,17 +36,17 @@
 					/>
 					<path d="M5241 4453 c-209 -314 -208 -297 -41 -422 19 -14 37 -28 40 -31 3 -4 41 -29 85 -58 44 -29 85 -56 92 -62 6 -5 33 -19 60 -31 26 -13 50 -25 53 -29 9 -10 225 -110 237 -110 5 0 28 -9 51 -20 22 -11 46 -20 52 -20 6 0 46 -12 88 -26 88 -30 122 -39 297 -74 167 -33 535 -46 650 -23 33 7 101 20 150 28 122 21 333 81 418 119 17 7 59 24 92 37 100 38 393 199 415 228 3 3 17 13 31 21 44 25 90 62 157 126 64 62 64 62 -73 265 -76 112 -163 242 -194 288 -55 83 -55 83 -86 45 -60 -76 -156 -165 -233 -217 -26 -17 -49 -33 -52 -37 -3 -3 -27 -19 -55 -35 -120 -72 -270 -131 -415 -164 -30 -7 -71 -17 -90 -21 -136 -32 -403 -39 -560 -15 -231 36 -318 62 -518 153 -41 19 -134 73 -142 82 -3 3 -21 17 -40 30 -55 39 -169 136 -182 155 -81 124 -82 123 -287 -182z" />
 				</g>
-			</svg>
+			</svg> -->
 		</div>
 	</div>
 </section>
 <section class="container pt-2 pb-5 mb-5 mt-lg-3 mt-xl-2 mt-xxl-2">
 	<div class="pt-4 pt-sm-3 mt-md-3">
 		<h1 class="pb-3 mb-2 mb-sm-3 mb-lg-4" data-aos="flip-up" data-aos-duration="300">
-			Welcome to Almondcove
+			Welcome,
 			<!-- <span class="text-primary">Almondcove</span> -->
 		</h1>
-		<p class="fs-lg" data-aos="fade-in" data-aos-duration="500">&nbsp;&nbsp;&nbsp;&nbsp; Welcome to the almondcove, an online webspace with blogs, galleries ,bootlegs and original mixes by me and other web artifacts. Will yapp more later , till then this will be my placeholder.</p>
+		<p class="fs-lg" data-aos="fade-in" data-aos-duration="500">&nbsp;&nbsp;&nbsp;&nbsp; Welcome to the my web space, an online platform where i share blogs, galleries ,bootlegs and original mixes by me and other web artifacts. Will yapp more later ,till then this will be my about placeholder.</p>
 		<div class="d-flex">
 			<div class="d-flex">
 				<a *ngFor="let link of socialLinks" class="btn btn-outline-secondary btn-icon btn-sm {{ 'btn-' + link.platform.toLowerCase() }} me-3" target="_blank" [href]="link.url">
@@ -63,8 +86,8 @@
 					<div class="d-none d-md-block d-xxl-none" style="height: 900px"></div>
 					<div class="d-md-none" style="height: 50px"></div>
 					<div data-aos="fade-up" data-aos-duration="800" data-aos-offset="250" data-disable-parallax-down="md">
-						<h2 class="h1 pb-sm-2 pb-md-3">All about almondcove studio</h2>
-						<p>Original mixes, bootlegs and much more</p>
+						<h2 class="h1 pb-sm-2 pb-md-3">Studio</h2>
+						<p>Original mixes, bootlegs,web artifacts, code blocks and much more</p>
 						<a class="btn btn-link text-dark px-0" routerLink="/about">
 							Read more
 							<i class="ai-arrow-right ms-2"></i>
