--- a/src/ui/src/app/components/shared/audio-player/audio-player.component.html
+++ b/src/ui/src/app/components/shared/audio-player/audio-player.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="currentAudio" class="card text-center card border-0 bg-secondary">
-    <div class="card-header">current track: {{ currentAudio }}</div>
+    <div class="card-header">{{ currentAudio }}</div>
     <div class="card-body">
         <div class="seek-panel">
           <input 
