--- a/src/ui/src/app/components/studio/studio.component.html
+++ b/src/ui/src/app/components/studio/studio.component.html
@@ -1,204 +1,1 @@
-<section class="container py-5 mt-5 mb-xl-3 mb-xxl-5">
-	<div class="row pt-2">
-		<!-- Text + CTA button-->
-		<div class="col-lg-6 d-flex flex-column mb-4 mb-lg-0 pb-sm-3 pb-lg-0" data-aos="fade" data-aos-duration="500" data-aos-offset="50" data-disable-parallax-down="md" data-disable="md">
-			<h1 class="display-1 text-uppercase fw-bold mt-auto mb-2">
-				the
-				<span class="fw-normal">Almondcove</span>
-				music
-				<span class="d-none d-md-inline-block align-middle ms-4" style="width: 120px; height: 2px; background-color: currentColor"></span>
-			</h1>
-			<div class="d-flex align-items-center py-4 py-lg-5">
-				<div class="flex-shrink-sm-0" style="color: currentColor">
-					<svg style="margin-left: 0px" version="1.0" xmlns="http://www.w3.org/2000/svg" width="75.000000pt" height="24.000000pt" viewBox="0 0 1000.000000 300.000000" preserveAspectRatio="xMidYMid meet">
-						<g transform="translate(0.000000,275.000000) scale(0.100000,-0.100000)" fill="currentColor" stroke="none">
-							<path d="M520 2725 c0 -3 0 -104 0 -225 0 -121 0 -224 0 -230 0 -6 84 -10 230 -10 l231 0 -3 -787 c-4 -900 0 -858 -87 -944 -71 -71 -168 -85 -263 -38 -43 22 -73 62 -104 138 l-23 56 -250 3 c-138 1 -251 -1 -251 -5 0 -5 11 -48 24 -98 47 -173 117 -297 228 -401 188 -175 476 -231 735 -142 132 45 199 87 281 173 103 108 159 228 187 400 12 75 15 262 15 1103 l0 1012 -475 0 c-261 0 -475 -2 -475 -5z"></path>
-							<path d="M2305 2734 c-326 -53 -572 -272 -639 -571 -21 -92 -21 -270 0 -371 33 -164 134 -314 272 -405 79 -53 217 -116 397 -182 201 -74 271 -111 341 -180 74 -73 96 -129 96 -242 -1 -96 -31 -162 -107 -231 -73 -67 -154 -97 -260 -96 -102 1 -167 28 -229 94 -61 66 -88 121 -111 232 l-5 28 -256 0 -257 0 7 -60 c21 -187 95 -345 226 -484 176 -186 400 -275 664 -263 198 9 362 65 508 176 127 96 233 262 280 436 31 118 31 338 -1 450 -82 290 -258 442 -689 594 -95 34 -198 74 -230 90 -70 35 -146 115 -161 167 -14 52 -14 147 1 198 18 60 99 138 163 157 100 29 212 9 275 -48 54 -48 76 -86 97 -168 l19 -70 244 0 244 0 -3 49 c-8 132 -80 311 -171 423 -96 119 -250 219 -395 258 -60 16 -263 28 -320 19z"></path>
-							<path d="M3447 2481 l-187 -269 2 -417 3 -417 160 233 160 234 3 -907 c1 -533 6 -908 11 -908 5 0 168 233 362 518 775 1134 880 1287 889 1290 7 2 10 -320 10 -912 l0 -916 250 0 250 0 0 1370 0 1370 -232 0 -233 0 -390 -560 c-214 -307 -393 -559 -397 -559 -5 -1 -8 251 -8 559 l0 560 -232 0 -233 -1 -188 -268z"></path>
-							<path d="M5445 2727 c-3 -7 -4 -114 -3 -237 l3 -225 483 -3 482 -2 0 -330 0 -330 -272 -2 -273 -3 0 -235 0 -235 273 -3 272 -2 0 -320 c0 -249 -3 -320 -12 -320 -7 0 -220 0 -473 0 -253 0 -466 -4 -473 -8 -9 -7 -12 -61 -10 -238 l3 -229 738 -3 737 -2 -2 1367 -3 1368 -733 3 c-588 2 -734 0 -737 -11z"></path>
-							<path d="M7002 2503 l3 -238 478 -3 477 -2 0 -330 0 -330 -267 -2 -268 -3 -3 -237 -2 -238 270 0 270 0 -2 -320 -3 -321 -475 -2 -475 -2 -3 -237 -2 -238 735 0 735 0 0 1370 0 1370 -735 0 -735 0 2 -237z"></path>
-							<path d="M8557 2723 c-4 -3 -7 -618 -7 -1365 l0 -1358 255 0 255 0 0 1130 0 1130 253 2 252 3 3 233 2 232 -503 0 c-277 0 -507 -3 -510 -7z"></path>
-						</g>
-					</svg>
-				</div>
-			</div>
-			<ul class="nav mt-auto mx-n2 pt-sm-3 pt-lg-0">
-				<li class="nav-item me-3"><a class="nav-link p-2" target="_blank" href="https://www.youtube.com/@JSM33T">youtube</a></li>
-				<li class="nav-item me-3"><a class="nav-link p-2" target="_blank" href="https://soundcloud.com/jsm33t">soundcloud</a></li>
-				<li class="nav-item"><a class="nav-link p-2" target="_blank" href="https://www.instagram.com/thecoffeeroominsta/">instagram</a></li>
-			</ul>
-		</div>
-
-		<div class="col-lg-6" data-aos="fade-up" data-aos-duration="700">
-			<img src="/assets/images/covers/studio-cover.png" alt="Studio Cover" />
-		</div>
-	</div>
-</section>
-<section class="container py-md-4 py-lg-5 mb-xl-3 mb-xxl-5">
-	<div class="row pt-sm-2">
-		<div class="col-xl-10">
-			<p class="fs-2 text-dark pb-md-2 mb-lg-5">Dive into a spectrum of sounds - from experimantal bootlegs blended with future bass, dnb and progressive to original orchestral compositions.</p>
-		</div>
-	</div>
-	<div class="row pb-5">
-		<div class="col-sm-4 col-lg-3 mb-3">
-			<h3 class="display-1 mb-0 mb-sm-1">16+</h3>
-			<span class="fs-sm">Radio Features</span>
-		</div>
-		<div class="col-sm-4 col-lg-3 mb-3">
-			<h3 class="display-1 mb-0 mb-sm-1">90k+</h3>
-			<span class="fs-sm">SoundCoud Plays</span>
-		</div>
-		<div class="col-sm-4 col-lg-3 mb-2 mb-sm-3">
-			<h3 class="display-1 mb-0 mb-sm-1">350K+</h3>
-			<span class="fs-sm">Total Youtube Plays</span>
-		</div>
-	</div>
-</section>
-<section class="container overflow-hidden pb-5 mb-2 mb-lg-3 mb-xl-4 mb-xxl-5 pt-5">
-	<div class="masonry-filterable">
-		<div class="row pb-lg-4 mb-2 mb-sm-3">
-			<!-- Page title -->
-			<div class="col-xxl-3 col-lg-4 text-center text-lg-start">
-				<h1>jsm33t music</h1>
-				<p class="mb-4 mb-lg-0">Compilation of all my remixes and teasers</p>
-			</div>
-
-			<!-- Filters -->
-			<div class="col-xxl-9 col-lg-8 d-flex">
-				<ul class="masonry-filters nav nav-pills fs-sm flex-nowrap overflow-auto text-nowrap w-100 mx-auto me-lg-0 pb-3" style="max-width: 456px">
-					<li class="nav-item mb-0">
-						<a class="nav-link border active" href="#" data-group="all">All</a>
-					</li>
-					<li class="nav-item mb-0">
-						<a class="nav-link border" href="#" data-group="albums">Albums</a>
-					</li>
-					<li class="nav-item mb-0">
-						<a class="nav-link border" href="#" data-group="singles">Singles</a>
-					</li>
-					<li class="nav-item mb-0">
-						<a class="nav-link border" href="#" data-group="snippets">Snippets</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-
-		<div class="masonry-grid" data-columns="3">
-			<!-- Item -->
-			<article *ngFor="let item of items" class="masonry-grid-item pb-5 mb-md-2 mb-lg-4 mb-xl-5" [attr.data-groups]="getGroupsJson(item.group)">
-				<div class="zoom-effect position-relative border-bottom pb-3" style="max-width: 512px">
-					<div class="zoom-effect-wrapper">
-						<div class="zoom-effect-img">
-							<img [src]="assetLocation + item.imgSrc" [alt]="item.title" />
-						</div>
-					</div>
-					<div class="pt-4 mt-lg-2">
-						<h2 class="h4 mb-2">
-							<a class="stretched-link" [routerLink]="['/studio', item.link]">{{ item.title }}</a>
-						</h2>
-						<div class="d-flex justify-content-between fs-lg text-body-secondary">
-							<span>{{ item.categories.join(", ") }}</span>
-							<span>{{ item.year }}</span>
-						</div>
-					</div>
-				</div>
-			</article>
-		</div>
-
-		<!-- Button -->
-		<div class="text-center pb-sm-2 pb-md-4 mt-n1 mt-lg-n2">
-			<a class="btn btn-lg btn-outline-dark rounded-0" href="#">Let's work together</a>
-		</div>
-	</div>
-</section>
-
-<!-- Features (Binded slider) -->
-<section class="container pt-5 mt-lg-3 mt-xl-4 mt-xxl-5 pb-5">
-	<div class="row align-items-center pt-3 pt-sm-4 pt-lg-5 mt-md-3 mt-lg-0">
-		<div class="col-md-6 pb-2 pb-sm-0 mb-4 mb-sm-5 mb-md-0">
-			<!-- Binded images -->
-			<div class="binded-content bg-primary rounded-5">
-				<!-- Item -->
-				<div class="binded-item active" id="image1">
-					<svg class="d-block position-absolute top-0 start-0 w-100 h-100 text-warning" width="636" height="640" viewBox="0 0 636 640" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						<path d="M586.2,329.8c-0.2-2.9-0.6-5.8-1.3-8.6c-1.5-5.8-5.5-11-11.7-15c-5.5-3.6-12.7-6.1-20.2-7c-7.4-0.9-15-0.3-21.2,1.8c-6.9,2.3-12,6.2-14.9,11.3c-3.2,5.7-4,11.1-2.5,16.1c1.4,4.3,4.5,8,9.3,11.1c5.7,3.6,13.7,6.2,22.7,7.2c8.1,1,16,0.5,20.9-1.1c3.8-1.3,7.6-2.8,11.3-4.5c-2.6,11.4-10.3,23.2-22.8,35.1c-26.2,24.9-67.3,43.8-88.6,50.5c-1.7,0.5-2.7,2.4-2.1,4.1c0.3,0.8,0.8,1.5,1.6,1.9c0.5,0.2,1,0.4,1.5,0.4c0.3,0,0.7,0,1-0.2c18.8-5.9,62.1-24.3,91.2-52c15.2-14.5,23.8-29.1,25.6-43.5c18.6-10.1,35.1-24.9,50-40.7v-9.5C621.1,303.4,604.7,319,586.2,329.8z M565.3,339.3c-4.3,1.4-11.1,1.8-18.2,0.9c-7.9-1-15-3.2-19.9-6.4c-3.5-2.2-5.7-4.7-6.5-7.5c-1-3.1-0.3-6.8,2-10.9c1.7-3.1,4.6-5.5,8.5-7.3c4.3-1.9,9.5-2.9,15-2.9c2,0,4,0.1,6.1,0.4c6.3,0.8,12.3,2.8,16.9,5.5c2.5,1.5,4.6,3.3,6.2,5.3c1.6,1.9,2.7,4.1,3.3,6.3c0.9,3.5,1.3,7,1.2,10.5C575,335.7,570.1,337.7,565.3,339.3z"></path>
-						<path d="M140.2,52.6c-1.2-9-6.2-17.2-12-24c-0.8-0.9-2.1-1-3-0.2c-0.9,0.8-1,2.1-0.2,3c5.3,6.2,10,13.6,11,21.8c0.1,1.2,1.2,2,2.4,1.8C139.5,54.9,140.3,53.8,140.2,52.6z"></path>
-						<path d="M124.1,72.9c-6.1,0.3-11.5,2-17.2,3.6c-1.1,0.3-1.8,1.5-1.5,2.6c0.3,1.1,1.5,1.8,2.6,1.5c5.5-1.5,10.6-3.1,16.3-3.4c1.2-0.1,2.1-1,2-2.2C126.2,73.7,125.3,72.8,124.1,72.9z"></path>
-						<path d="M131.5,57.8c-11.4-6.8-25.1-12.4-38.2-15.2c-1.1-0.2-2.3,0.5-2.5,1.6c-0.2,1.1,0.5,2.3,1.6,2.5c12.6,2.8,25.9,8.1,36.9,14.7c1,0.6,2.3,0.3,2.9-0.7C132.8,59.7,132.5,58.4,131.5,57.8z"></path>
-					</svg>
-					<img class="d-block position-relative z-2" src="https://images.pexels.com/photos/63703/pexels-photo-63703.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="App screen" />
-				</div>
-
-				<!-- Item -->
-				<div class="binded-item" id="image2">
-					<svg class="d-block position-absolute top-0 start-0 w-100 h-100 text-warning" width="636" height="640" viewBox="0 0 636 640" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						<path
-							d="M412.197 -54.1417C409.01 -50.153 404.449 -45.0689 396.393 -36.5235C378.652 -17.7043 368.395 -4.20178 339.64 38.1888C320.084 67.0197 313.732 75.6921 305.904 84.2505C302.46 88.0158 296.937 91.7681 294.312 92.1252C293.471 92.2398 292.661 91.7642 292.353 90.9757L292.291 90.8173C290.997 87.5076 290.656 82.5981 290.886 70.6154C291.253 51.5223 290.257 44.8019 286.15 38.6548C276.062 23.5577 257.645 38.0693 231.392 81.802C229.48 84.987 223.898 94.9317 218.988 103.901C199.782 138.985 195.822 145.462 192.294 147.561L191.853 147.823C191.125 148.256 190.18 147.984 189.793 147.231C188.667 145.037 187.961 141.017 186.717 129.714C184.189 106.732 180.914 98.5708 173.15 95.8985C165.844 93.3837 153.123 103.378 140.69 121.402C131.347 134.945 113.831 166.078 91.0128 209.694C69.8233 250.198 66.3837 256.187 64.5396 255.784C63.9143 255.647 63.7312 251.161 63.5858 232.448C63.305 196.288 62.4571 188.893 57.6271 180.481C48.7649 165.045 38.9039 173.309 18.4076 213.349C4.9308 239.676 -5.25857 266.339 -16.531 304.775C-22.481 325.063 -23.547 329.347 -22.9161 330.435C-22.4361 331.262 -21.607 330.886 -21.8104 329.933C-21.9715 329.175 -19.829 322.329 -16.6872 313.564C-15.5519 310.397 -13.4645 304.212 -12.0486 299.819C-5.17897 278.51 8.39215 243.529 15.5497 228.681C28.8615 201.067 39.4459 183.801 45.7893 179.352C49.4163 176.808 50.6601 177.421 53.7621 183.285C57.7184 190.764 58.7369 200.207 59.1715 233.43C59.5061 259.004 59.9209 261.21 64.3216 260.814C69.8899 260.313 73.9997 254.012 96.5793 211.354C137.787 133.504 155.164 107.073 168.666 101.708C175.088 99.156 179.298 108.555 181.934 131.331C183.982 149.026 185.558 153.247 190.21 153.495C196.679 153.841 201.275 147.557 225.333 105.473C246.313 68.7723 259.369 50.518 270.19 42.7571C276.503 38.2285 278.497 38.5429 281.567 44.5509C284.012 49.336 284.551 54.6178 284.232 70.6599C283.754 94.6223 286.717 101.264 296.665 98.5284C307.305 95.6024 314.857 86.8209 345.622 41.5992C362.049 17.4536 367.831 9.29258 380.682 -7.88343C385.241 -13.9779 391.495 -22.7637 394.579 -27.4072C397.663 -32.051 402.878 -39.7522 406.167 -44.5213C409.456 -49.2904 412.734 -54.0439 413.452 -55.0844C415.191 -57.6056 414.626 -57.1815 412.197 -54.1417Z"
-						></path>
-					</svg>
-					<img class="d-block position-relative z-2" src="https://images.pexels.com/photos/63703/pexels-photo-63703.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="App screen" />
-				</div>
-
-				<!-- Item -->
-				<div class="binded-item" id="image3">
-					<svg class="d-block position-absolute top-0 start-0 w-100 h-100 text-warning" width="636" height="640" viewBox="0 0 636 640" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-						<path
-							d="M183.271 -81.2966C186.59 -77.143 191.339 -71.8486 199.728 -62.9498C218.204 -43.3523 228.885 -29.2913 258.828 14.8524C279.194 44.8757 285.808 53.9067 293.96 62.819C297.546 66.74 303.298 70.6475 306.031 71.0195C306.907 71.1387 307.751 70.6435 308.072 69.8223L308.136 69.6575C309.483 66.2108 309.839 61.0983 309.599 48.6201C309.217 28.7373 310.254 21.739 314.531 15.3377C325.036 -0.383858 344.214 14.7279 371.554 60.2693C373.545 63.586 379.357 73.942 384.471 83.2827C404.47 119.817 408.595 126.562 412.268 128.748L412.727 129.02C413.486 129.471 414.47 129.189 414.873 128.404C416.046 126.119 416.781 121.933 418.076 110.163C420.709 86.2303 424.119 77.7316 432.204 74.9488C439.812 72.3299 453.06 82.7381 466.007 101.507C475.736 115.61 493.977 148.031 517.738 193.451C539.804 235.63 543.386 241.866 545.306 241.447C545.957 241.304 546.148 236.632 546.299 217.146C546.592 179.49 547.475 171.789 552.505 163.029C561.733 146.955 572.002 155.561 593.346 197.256C607.38 224.673 617.991 252.438 629.73 292.464C635.926 313.591 637.036 318.052 636.379 319.185C635.879 320.047 635.016 319.655 635.227 318.662C635.395 317.873 633.164 310.743 629.892 301.617C628.71 298.318 626.536 291.877 625.062 287.303C617.908 265.112 603.776 228.685 596.322 213.222C582.46 184.466 571.438 166.487 564.832 161.853C561.055 159.204 559.76 159.843 556.529 165.949C552.41 173.737 551.349 183.571 550.896 218.168C550.548 244.8 550.116 247.097 545.533 246.685C539.735 246.163 535.455 239.601 511.941 195.179C469.03 114.109 450.934 86.5855 436.873 80.9983C430.186 78.341 425.802 88.1292 423.057 111.846C420.924 130.274 419.283 134.669 414.438 134.928C407.702 135.288 402.916 128.744 377.863 84.9195C356.015 46.7007 342.419 27.6914 331.151 19.6096C324.576 14.8938 322.5 15.2211 319.303 21.4776C316.757 26.4606 316.195 31.9608 316.528 48.6664C317.026 73.6198 313.94 80.5362 303.581 77.6874C292.501 74.6404 284.636 65.4957 252.599 18.4038C235.493 -6.74031 229.472 -15.2389 216.09 -33.1252C211.341 -39.4717 204.829 -48.6209 201.617 -53.4564C198.406 -58.2923 192.976 -66.312 189.55 -71.2784C186.125 -76.2447 182.712 -81.1947 181.964 -82.2783C180.153 -84.9037 180.741 -84.4621 183.271 -81.2966Z"
-						></path>
-					</svg>
-					<img class="d-block position-relative z-2" src="https://images.pexels.com/photos/63703/pexels-photo-63703.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="App screen" />
-				</div>
-			</div>
-		</div>
-		<div class="col-md-6 col-xl-5 offset-xl-1">
-			<div class="ps-md-4 ps-xl-0">
-				<!-- Swiper slider -->
-				<div
-					class="swiper"
-					data-swiper-options='{
-			"spaceBetween": 30,
-			"autoHeight": true,
-			"bindedContent": true,
-			"navigation": {
-			  "prevEl": "#prev-feature",
-			  "nextEl": "#next-feature"
-			}
-		  }'
-				>
-					<div class="swiper-wrapper">
-						<!-- Item -->
-						<div class="swiper-slide" data-swiper-binded="#image1">
-							<div class="text-primary fs-xl fw-bold mb-3">01</div>
-							<h2 class="h1 mb-lg-4">Choose the courses you are interested in</h2>
-							<p class="mb-0">Odio pellentesque faucibus tortor, sit ac mattis tincidunt magna sit. Vitae elementum amet etiam rhoncus, lacinia amet interdum pharetra tincidunt. Ultricies faucibus ac morbi eget nunc pretium id. Velit tristique scelerisque elit sociis convallis ultricies aliquam.</p>
-						</div>
-
-						<!-- Item -->
-						<div class="swiper-slide" data-swiper-binded="#image2">
-							<div class="text-primary fs-xl fw-bold mb-3">02</div>
-							<h2 class="h1 mb-lg-4">Track classes in progress and seek new knowledge</h2>
-							<p class="mb-0">Odio pellentesque faucibus tortor, sit ac mattis tincidunt magna sit. Vitae elementum amet etiam rhoncus, lacinia amet interdum pharetra tincidunt. Ultricies faucibus ac morbi eget nunc pretium id. Velit tristique scelerisque elit sociis convallis ultricies aliquam.</p>
-						</div>
-
-						<!-- Item -->
-						<div class="swiper-slide" data-swiper-binded="#image3">
-							<div class="text-primary fs-xl fw-bold mb-3">03</div>
-							<h2 class="h1 mb-lg-4">Study with a teacher in video format at a time convenient for you</h2>
-							<p class="mb-0">Odio pellentesque faucibus tortor, sit ac mattis tincidunt magna sit. Vitae elementum amet etiam rhoncus, lacinia amet interdum pharetra tincidunt. Ultricies faucibus ac morbi eget nunc pretium id. Velit tristique scelerisque elit sociis convallis ultricies aliquam.</p>
-						</div>
-					</div>
-				</div>
-
-				<!-- Slider controls (Prev / Next) -->
-				<div class="d-flex justify-content-center justify-content-md-start pt-4 mt-2 mt-lg-0 pt-lg-5">
-					<button class="btn btn-icon btn-outline-primary rounded-circle me-3" type="button" id="prev-feature" aria-label="Prev">
-						<i class="ai-arrow-left"></i>
-					</button>
-					<button class="btn btn-icon btn-outline-primary rounded-circle" type="button" id="next-feature" aria-label="Next">
-						<i class="ai-arrow-right"></i>
-					</button>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
+<router-outlet></router-outlet>
