:art: ui sidebar overhaul

--- a/src/ui/src/app/components/home/home.component.html
+++ b/src/ui/src/app/components/home/home.component.html
@@ -5,7 +5,7 @@
 		<div class="row align-items-center pt-5 mt-4 mt-xxl-0">
 			<!-- Video + Parallax -->
 			<div class="col-lg-6 mb-4 mb-lg-0 pb-3 pb-lg-0">
-				<div class="parallax mx-auto mx-lg-0" style="max-width: 582px">
+				<div #parallaxElement class="parallax mx-auto mx-lg-0" style="max-width: 582px">
 					<div class="parallax-layer z-3" data-depth="0.1">
 						<div class="position-relative bg-dark mx-auto" style="max-width: 61%; padding: 0.3125rem; margin-bottom: 9.9%; border-radius: calc(var(--ar-border-radius) * 2.125)">
 							<div class="position-absolute start-50 translate-middle-x" style="top: 4.4%; width: 85%">
