--- a/src/ui/src/app/components/shared/side-panel/side-panel.component.html
+++ b/src/ui/src/app/components/shared/side-panel/side-panel.component.html
@@ -8,37 +8,75 @@
 		<button class="btn-close" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 	</div>
 	<div class="offcanvas-body">
-        <app-audio-player></app-audio-player>
-
-        <button (click)="disableAnimations()" class="btn btn-outline-primary">
-            <i class="ai-play"></i>
-          </button>
-          <button (click)="enableAnimations()" class="btn btn-outline-primary">
-            <i class="ai-play"></i>
-          </button>
-		<div class="d-flex align-items-center pt-4 mt-n2 mb-3">
+        <div class="d-flex align-items-center mt-n2 mb-3 pt-4">
 			<i class="ai-maximize text-body-secondary fs-5 me-2"></i>
-			<h5 class="mb-0">Updates</h5>
+			<h5 class="mb-0">Media player</h5>
 		</div>
-		<label class="d-flex w-100 text-mute fs-sm fw-medium pt-1 mb-4" for="border-width">coming soon</label>
-		<div class="d-flex align-items-center mt-n2 mb-3">
+		<app-audio-player></app-audio-player>
+		<div class="d-flex align-items-center mt-n2 mb-3 pt-4">
 			<i class="ai-maximize text-body-secondary fs-5 me-2"></i>
 			<h5 class="mb-0">Themes</h5>
 		</div>
 		<div class="mb-4">
-			<label class="d-flex w-100 text-mute fs-sm fw-medium pt-1 mb-2" for="border-width">coming soon: color schemes</label>
+			<div class="card text-center card border-0 bg-secondary mb-2 wip">
+				<div class="card-header py-3">Slate</div>
+				<div class="card-body py-3">
+					<div class="btn-group w-100" role="group" aria-label="Outline button group">
+						<button type="button" class="btn btn-sm btn-outline-primary">Slate</button>
+						<button type="button" class="btn btn-sm btn-outline-primary">Olive</button>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="d-flex align-items-center mt-n2 mb-3">
+		<div class="d-flex align-items-center mt-n2 mb-3 pt-4">
 			<i class="ai-maximize text-body-secondary fs-5 me-2"></i>
-			<h5 class="mb-0">Accessibility</h5>
+			<h5 class="mb-0">Fonts</h5>
 		</div>
-		<div class="mb-4">
-			<label class="d-flex w-100 text-mute fs-sm fw-medium pt-1 mb-2" for="border-width">coming soon: font size, font family</label>
+
+		<div class="card text-center card border-0 bg-secondary mb-2 wip">
+			<div class="card-header py-2">Font Fam</div>
+			<div class="card-body py-2">
+				<select class="form-select py-2" id="root-font-size">
+                    <option value="consolas">Default</option>
+                    <option value=".875rem">Other font</option>
+                  </select>
+			</div>
+
+			<div class="card-header py-2">Font Size</div>
+			<div class="card-body py-2">
+				<div class="btn-group w-100" role="group" aria-label="Outline button group">
+					<button type="button" class="btn btn-sm btn-outline-primary">S</button>
+					<button type="button" class="btn btn-sm btn-outline-primary">M</button>
+					<button type="button" class="btn btn-sm btn-outline-primary">L</button>
+				</div>
+			</div>
 		</div>
-		<div class="mt-4 d-flex align-items-center mt-n2 mb-3">
+
+		<div class="d-flex align-items-center mt-n2 mb-3 pt-4">
 			<i class="ai-maximize text-body-secondary fs-5 me-2"></i>
-			<h5 class="mb-0">External links</h5>
+			<h5 class="mb-0">Experience</h5>
 		</div>
+		<div class="card text-center card border-0 bg-secondary mb-2">
+			<div class="card-header py-2 mb-2">Animations</div>
+			<div class="card-body py-2">
+				<div class="btn-group w-100" role="group" aria-label="Outline button group">
+					<button type="button" (click)="enableAnimations()" class="btn btn-sm btn-outline-primary" [class.active]="isAnimationEnabled">Enable</button>
+					<button type="button" (click)="disableAnimations()" class="btn btn-sm btn-outline-primary" [class.active]="!isAnimationEnabled">Disable</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="card text-center card border-0 bg-secondary mb-2">
+			<div class="card-header py-2 mb-2">Scrollbar<span class="text-danger fs-xs ms-2">wip</span></div>
+			<div class="card-body py-2">
+				<div class="btn-group w-100" role="group" aria-label="Outline button group">
+					<button type="button" (click)="defaultScrollbar()" class="btn btn-sm btn-outline-primary">Default</button>
+					<button type="button" (click)="disableScrollbar()" class="btn btn-sm btn-outline-primary">Disable</button>
+                    <button type="button" (click)="skinnyScrollbar()" class="btn btn-sm btn-outline-primary">Skiny</button>
+				</div>
+			</div>
+		</div>
+
 		<!-- <div class="mb-3 mt-3">
 			<div><a href="https://almondcove.in" target="_blank">almondcove.in</a></div>
 			<div><a href="https://assambrew.com" target="_blank">assambrew.in</a></div>
@@ -46,7 +84,6 @@
 			<div><a routerLink="/theme">theme</a></div>
 		</div> -->
 	</div>
-  
 </div>
 
 <!-- Customizer toggler -->
@@ -54,4 +91,3 @@
 	<i class="ai-settings text-primary fs-base me-1 ms-n1"></i>
 	Panel
 </a>
-
