:rocket: cdn outsource

--- a/src/ui/src/app/components/about/home/home.component.html
+++ b/src/ui/src/app/components/about/home/home.component.html
@@ -183,13 +183,13 @@
 		<div class="col-11 col-sm-9 col-md-7 col-lg-6 pb-2 pb-sm-3 pb-md-0 mb-4 mb-md-0">
 			<div class="parallax" style="max-width: 636px">
 				<div class="parallax-layer" data-depth="0.05">
-					<img src="./assets/images/about/circle-1.png" alt="Circle 1" />
+					<img src="{{webassets}}/webassets/images/about/circle-1.png" alt="Circle 1" />
 				</div>
 				<div class="parallax-layer" data-depth="0.1">
-					<img src="./assets/images/about/circle-2.png" alt="Circle 2" />
+					<img src="{{webassets}}/webassets/images/about/circle-2.png" alt="Circle 2" />
 				</div>
 				<div class="parallax-layer" data-depth="0.15">
-					<img src="./assets/images/about/circle-3.png" alt="Circle 3" />
+					<img src="{{webassets}}/webassets/images/about/circle-3.png" alt="Circle 3" />
 				</div>
 				<div class="parallax-layer" data-depth="0.2">
 					<div class="position-absolute top-50 start-50 translate-middle bg-primary rounded-circle p-4">
@@ -335,10 +335,10 @@
 			</div>
 		</div>
 		<div class="col-md-5 col-xl-4 offset-lg-1 text-center text-md-start">
-			<h3 class="h2 mb-lg-4">Tasks automation</h3>
-			<p class="fs-lg pb-lg-2 mb-4">Integrate our smart AI with the tools you already know and use. 10x times increase your productivity and efficiency of your team.</p>
-			<a href="#" class="btn btn-outline-primary rounded-pill">
-				Learn more
+			<h3 class="h2 mb-lg-4">Stuffs</h3>
+			<p class="fs-lg pb-lg-2 mb-4">A collection of my soundtracks (original adn bootlegs), codes, apps, web assets and much more.</p>
+			<a routerLink="/about/faq"  class="btn btn-outline-primary rounded-pill">
+				App Walkthrough
 				<i class="ai-arrow-right fs-lg ms-2 me-n1"></i>
 			</a>
 		</div>
