--- a/src/ui/src/app/components/account/account.component.html
+++ b/src/ui/src/app/components/account/account.component.html
@@ -8,8 +8,8 @@
 		<router-outlet></router-outlet>
 		<!-- Copyright -->
 		<p class="nav w-100 fs-sm pt-5 pb-5 mt-auto mb-5" style="max-width: 526px">
-			<span class="text-body-secondary">&copy; All rights reserved. Made by</span>
-			<a class="nav-link d-inline-block p-0 ms-1" href="https://createx.studio/" target="_blank" rel="noopener">Createx Studio</a>
+			<span class="text-body-secondary">&copy; Compiled with love by</span>
+			<a class="nav-link d-inline-block p-0 ms-1" href="https://jsm33t.me" target="_blank" rel="noopener">JSM33T</a>
 		</p>
 	</div>
 	<div class="w-50 bg-size-cover bg-repeat-0 bg-position-center" style="background-image: url(assets/images/covers/login.jpg)"></div>
