--- a/src/ui/src/app/components/account/signup/signup.component.html
+++ b/src/ui/src/app/components/account/signup/signup.component.html
@@ -6,7 +6,7 @@
 	</p>
 	<form class="" (ngSubmit)="onSubmit()" [formGroup]="sigupForm">
 		<div class="row row-cols-1 row-cols-sm-2 pb-4">
-			<div class="col mb-6">
+			<div class="col mb-6 mb-4">
 				<input class="form-control form-control-lg" type="text" placeholder="First name" required formControlName="firstName" />
 			</div>
 			<div class="col mb-6">
