--- a/src/ui/src/app/components/home/home.component.html
+++ b/src/ui/src/app/components/home/home.component.html
@@ -25,7 +25,7 @@
 									</div>
 								</div>
 								<div class="d-flex align-items-center">
-									<img class="rounded-circle" src="assets/images/home/avatar.jpg" width="35" alt="Avatar" />
+									<img class="rounded-circle" src="{{webassets}}/webassets/images/home/avatar.jpg" width="35" alt="Avatar" />
 									<div class="fs-xs ps-2" data-bs-theme="light">
 										<span class="text-nav fw-bold me-1">jsm33t</span>
 										<span class="text-body-secondary">12 min</span>
@@ -33,21 +33,21 @@
 								</div>
 							</div>
 							<video class="d-block w-100" autoplay loop muted style="border-radius: calc(var(--ar-border-radius) * 1.875)">
-								<source src="assets/images/home/video.mp4" type="video/mp4" />
+								<source src="{{webassets}}/webassets/images/home/video.mp4" type="video/mp4" />
 							</video>
 						</div>
 					</div>
 					<div class="parallax-layer" data-depth="0.3">
-						<img src="assets/images/home/shape01.svg" alt="Background shape" />
+						<img src="{{webassets}}/webassets/images/home/shape01.svg" alt="Background shape" />
 					</div>
 					<div class="parallax-layer z-2" data-depth="-0.1">
-						<img src="assets/images/home/shape02.svg" alt="Background shape" />
+						<img src="{{webassets}}/webassets/images/home/shape02.svg" alt="Background shape" />
 					</div>
 					<div class="parallax-layer" data-depth="-0.15">
-						<img src="assets/images/home/shape03.svg" alt="Background shape" />
+						<img src="{{webassets}}/webassets/images/home/shape03.svg" alt="Background shape" />
 					</div>
 					<div class="parallax-layer z-2" data-depth="-0.25">
-						<img src="assets/images/home/shape04.svg" alt="Background shape" />
+						<img src="{{webassets}}/webassets/images/home/shape04.svg" alt="Background shape" />
 					</div>
 				</div>
 			</div>
@@ -128,13 +128,13 @@
     >
       <img
         class="d-dark-mode-none"
-        src="assets/img/landing/saas-1/features/02-light.png"
+        src="{{webassets}}/webassets/img/landing/saas-1/features/02-light.png"
         width="636"
         alt="Image"
       />
       <img
         class="d-none d-dark-mode-block"
-        src="assets/img/landing/saas-1/features/02-dark.png"
+        src="{{webassets}}/webassets/img/landing/saas-1/features/02-dark.png"
         width="636"
         alt="Image"
       />
@@ -173,13 +173,13 @@
     <div class="col-md-6 pt-xl-2 pb-3 pb-md-0 mb-3 mb-sm-4 mb-md-0">
       <img
         class="d-dark-mode-none"
-        src="assets/img/landing/saas-1/features/03-light.png"
+        src="{{webassets}}/webassets/img/landing/saas-1/features/03-light.png"
         width="636"
         alt="Image"
       />
       <img
         class="d-none d-dark-mode-block"
-        src="assets/img/landing/saas-1/features/03-dark.png"
+        src="{{webassets}}/webassets/img/landing/saas-1/features/03-dark.png"
         width="636"
         alt="Image"
       />
@@ -229,13 +229,13 @@
     >
       <img
         class="d-dark-mode-none"
-        src="assets/img/landing/saas-1/features/04-light.png"
+        src="{{webassets}}/webassets/img/landing/saas-1/features/04-light.png"
         width="636"
         alt="Image"
       />
       <img
         class="d-none d-dark-mode-block"
-        src="assets/img/landing/saas-1/features/04-dark.png"
+        src="{{webassets}}/webassets/img/landing/saas-1/features/04-dark.png"
         width="636"
         alt="Image"
       />
