--- a/src/ui/src/app/components/studio/home/home.component.html
+++ b/src/ui/src/app/components/studio/home/home.component.html
@@ -30,7 +30,7 @@
 		</div>
 
 		<div class="col-lg-6" data-aos="fade-up" data-aos-duration="700">
-			<img src="/assets/images/covers/studio-cover.png" alt="Studio Cover" />
+			<img src="{{webAssets}}/webassets/images/covers/studio-cover.png" alt="Studio Cover" />
 		</div>
 	</div>
 </section>
