--- a/src/ui/src/app/components/about/contact/contact.component.html
+++ b/src/ui/src/app/components/about/contact/contact.component.html
@@ -13,7 +13,7 @@
 			<h1 class="display-2" data-aos="flip-up" data-aos-duration="200">Contact</h1>
 			<p class="fs-lg pb-4 mb-0 mb-sm-2" data-aos="flip-up" data-aos-duration="500">
 				Got suggestions,ideas? ping me up with this form or mail me at
-				<a href="mailto:mail@almondcove.com" class="text-primary">maail&#64;almondcove.in</a>
+				<a href="mailto:mail@almondcove.com" class="text-primary">mail&#64;jsm33t.me</a>
 			</p>
 		</div>
 		<div class="col-lg-8 col-xl-7 offset-xl-1">
